# trojan-rag-demo

./: .gitignore  README.md  main.py  pyproject.toml  queries.json
data/: auth_lib_v4_security_patch.txt  database_ops.txt  internal_network_guide.txt  legacy_auth_official_docs.txt
src/: attack.py  config.py  ingest.py  logger.py  utils.py  visualize.py
