[project]
name = "trojan-rag-demo"
version = "0.1.0"
description = "A demonstration of RAG poisoning attacks using dormant documentation injections."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.3.7",
    "matplotlib>=3.10.8",
    "openai>=2.14.0",
    "python-dotenv>=1.2.1",
    "sentence-transformers>=5.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
